--- a/glossary.tex
+++ b/glossary.tex
@@ -10,6 +10,12 @@
     description={Large Language Model}
 }
 
+\newglossaryentry{LDM}
+{
+	name=LDM,
+	description={Latent Diffusion Model}
+}
+
 \newglossaryentry{MSE}
 {
 	name=MSE,
