--- a/bibliography.bib
+++ b/bibliography.bib
@@ -16,6 +16,15 @@
    type = {Journal Article}
 }
 
+@article{VQVAE,
+	author = {Van Den Oord, Aaron and Vinyals, Oriol},
+	title = {Neural discrete representation learning},
+	journal = {Advances in neural information processing systems},
+	volume = {30},
+	year = {2017},
+	type = {Journal Article}
+}
+
 
 @article{Gemini,
    author = {Team, Gemini and Anil, Rohan and Borgeaud, Sebastian and Alayrac, Jean-Baptiste and Yu, Jiahui and Soricut, Radu and Schalkwyk, Johan and Dai, Andrew M and Hauth, Anja and Millican, Katie},
