--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,25 @@
 % Large Language Models
-
+@inproceedings{tan2025ominicontrol,
+	title={Ominicontrol: Minimal and universal control for diffusion transformer},
+	author={Tan, Zhenxiong and Liu, Songhua and Yang, Xingyi and Xue, Qiaochu and Wang, Xinchao},
+	booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+	pages={14940--14950},
+	year={2025}
+}
+@article{CFG,
+	title={Classifier-free diffusion guidance},
+	author={Ho, Jonathan and Salimans, Tim},
+	journal={arXiv preprint arXiv:2207.12598},
+	year={2022}
+}
+@article{CG,
+	title={Diffusion models beat gans on image synthesis},
+	author={Dhariwal, Prafulla and Nichol, Alexander},
+	journal={Advances in neural information processing systems},
+	volume={34},
+	pages={8780--8794},
+	year={2021}
+}
 @article{GPT4,
    author = {Achiam, Josh and Adler, Steven and Agarwal, Sandhini and Ahmad, Lama and Akkaya, Ilge and Aleman, Florencia Leoni and Almeida, Diogo and Altenschmidt, Janko and Altman, Sam and Anadkat, Shyamal},
    title = {Gpt-4 technical report},
@@ -25,7 +45,13 @@
 	type = {Journal Article}
 }
 
-
+@inproceedings{ControlNet,
+	title={Adding conditional control to text-to-image diffusion models},
+	author={Zhang, Lvmin and Rao, Anyi and Agrawala, Maneesh},
+	booktitle={Proceedings of the IEEE/CVF international conference on computer vision},
+	pages={3836--3847},
+	year={2023}
+} 
 @article{Gemini,
    author = {Team, Gemini and Anil, Rohan and Borgeaud, Sebastian and Alayrac, Jean-Baptiste and Yu, Jiahui and Soricut, Radu and Schalkwyk, Johan and Dai, Andrew M and Hauth, Anja and Millican, Katie},
    title = {Gemini: a family of highly capable multimodal models},
