--- a/glossary.tex
+++ b/glossary.tex
@@ -16,6 +16,12 @@
 	description={Latent Diffusion Model}
 }
 
+\newglossaryentry{CFG}
+{
+	name=CFG,
+	description={Classifier-Free Guidance}
+}
+
 \newglossaryentry{MSE}
 {
 	name=MSE,
