--- a/theory_diffusion_models.tex
+++ b/theory_diffusion_models.tex
@@ -433,3 +433,15 @@ with $\mathbf{z}$ denoting the latents, specifically,  $\mathbf{z}_0$ being the 
 	\label{LDM}
 \end{figure}
 \subsection{Conditioning and Classifier-Free Guidance}
+In \gls{DM}s, conditioning plays a pivot role in steering the diffusion process through incorporating extra inputs such as text, semantic maps \cite{ControlNet}, or images \cite{tan2025ominicontrol} users can precisly control the content of the final image. Formally, the diffusion model is trained to learn the conditioned distribution $p(\mathbf{x}|\mathbf{y})$ where $\mathbf{y}$ represents the additional conditioning signal. Consequently, the noise prediction function is modified from $\boldsymbol{\epsilon}_\theta(\mathbf{x}_t, t)$  to $\boldsymbol{\epsilon}_\theta(\mathbf{x}_t, \mathbf{y},t)$.  Cross-attention layers (see section \ref{AttentionMechanism}) \cite{AttentionIsAllYouNeed} are an effective mechanism for integrating the additional guidance signal into the model. These layers are embedded at various resolutions within the U-net architecture, as shown in fig. \ref{LDM}, or within the transformer blocks of modern models like Pixart \cite{Pixart_s}.To process text prompts, a tokenizer first breaks down the text into discrete subword units, known as tokens, and assigns them a unique numerical ID. Next, the tokens are embedded in a higher-dimensional vector space by a text encoder, and positional encoding (see section \ref{label}) is applied to preserve the sequence order. These embeddings are the used as input for the cross-attention mechanism. 
+
+\subsubsection{Classifier-Free Guidance}
+A frequently used method to improve the alignment between the generated image and the text prompt is classifier-free guidance (\gls{CFG}) \cite{CFG}. This method builds upon on classifier guidance \cite{CG}, which was introduced for class conditioned diffusion models. In the classifier guidance framework, during training an external classifier predicts the class label and its gradients are used to steer the diffusion model to produce images that can be easily identified by the classifier and therefore have a higher quality. However this necessitate the training of an additional classifier which is able to operate on noisy input images as standard classifier are unsuitable for this task. The goal is to steer the diffusion through the additional learning signal to producing images with higher fidelity to the conditioning signal. To facilitate the training process and get rid of the extra classifier \gls{CFG} was introduced. In the \gls{CFG} framework, the diffsuion model is jointly trained on conditional $\boldsymbol{\epsilon}_\theta(\mathbf{x}_t, t,\mathbf{y} )$
+and unconditional $\boldsymbol{\epsilon}_\theta(\mathbf{x}_t, t,\mathbf{y} =\varnothing)$ objectives. For that during training the condition is randomly dropped with the probability $p_\text{unconditon}$. During inference, the same model is used twice to predict the conditional noise and the unconditional noise which are linearly combined to
+
+\begin{equation}
+	\tilde{\boldsymbol{\epsilon}}_\theta= (1+w)\boldsymbol{\epsilon}_\theta(\mathbf{x}_t, t,\mathbf{y} )  - w \boldsymbol{\epsilon}_\theta(\mathbf{x}_t, t,\mathbf{y} =\varnothing) /quad.
+\end{equation} 
+with $w$ being a hyperparameter called guidance scale. 
+
+A high value for $w$ pushes the generated images away from the unconditional distribution and towards the conditional distribution. However, this comes at the cost of higher computational inference time because the model has to be executed twice per timestep. Nevertheless, \gls{CFG} lead to higher text coherencen and yields higher-contrast and sharper images.
