--- a/theory_fundamental_NN.tex
+++ b/theory_fundamental_NN.tex
@@ -17,6 +17,7 @@ Each encoder block consists of two sub-layers. First, a multi-head self-attentio
 \end{figure}
 
 \subsection{Attention Mechanism}
+\label{AttentionMechanism}
 The attention mechanism is an integral part of the transformer architecture. It enables the model to focus on the input elements that are most important for the task at hand and ignore the less important ones. This mechanism was first introduced for \gls{RNN}s \cite{OrgAttention} to overcome the information bottleneck, as traditionally in RNNs only the last hidden state is given as input for the next prediction. In \cite{OrgAttention}, all previous hidden states were presented to the model as additional input, and the task of the attention mechanism was to filter out those that were relevant for the prediction of the next state. The authors of \cite{AttentionIsAllYouNeed} leveraged the formalism and reformulated it for the transformer architecture that will be discussed in the following. \\
 In the attention mechanism, so-called queries, keys and values are computed. The attention mechanism can be understood as a soft lookup table where queries search for relevant keys, and the corresponding values are retrieved and weighted by similarity.
  A distinction is made between self-attention (fig. \ref{SelfAttentionFigure}) and cross-attention (fig. \ref{CrossAttentionFigure}). In self-attention, the interaction of the tokens within a sequence is calculated. In contrast, in cross-attention you have two input sequences with the goal that the model aligns and relates information between the two different sequences.
