--- a/bibliography.bib
+++ b/bibliography.bib
@@ -20,6 +20,62 @@
 	pages={8780--8794},
 	year={2021}
 }
+@article{MMD1,
+	title={A kernel method for the two-sample-problem},
+	author={Gretton, Arthur and Borgwardt, Karsten and Rasch, Malte and Sch{\"o}lkopf, Bernhard and Smola, Alex},
+	journal={Advances in neural information processing systems},
+	volume={19},
+	year={2006}
+}
+@inproceedings{CLIP,
+	title={Learning transferable visual models from natural language supervision},
+	author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+	booktitle={International conference on machine learning},
+	pages={8748--8763},
+	year={2021},
+	organization={PmLR}
+}
+@article{MMD2,
+	title={A kernel two-sample test},
+	author={Gretton, Arthur and Borgwardt, Karsten M and Rasch, Malte J and Sch{\"o}lkopf, Bernhard and Smola, Alexander},
+	journal={The journal of machine learning research},
+	volume={13},
+	number={1},
+	pages={723--773},
+	year={2012},
+	publisher={JMLR. org}
+}
+@inproceedings{cmmd,
+	title={Rethinking fid: Towards a better evaluation metric for image generation},
+	author={Jayasumana, Sadeep and Ramalingam, Srikumar and Veit, Andreas and Glasner, Daniel and Chakrabarti, Ayan and Kumar, Sanjiv},
+	booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+	pages={9307--9315},
+	year={2024}
+}
+@inproceedings{szegedy2016rethinking,
+	title={Rethinking the inception architecture for computer vision},
+	author={Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jon and Wojna, Zbigniew},
+	booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+	pages={2818--2826},
+	year={2016}
+}
+@article{dowson1982frechet,
+	title={The Fr{\'e}chet distance between multivariate normal distributions},
+	author={Dowson, DC and Landau, BV666017},
+	journal={Journal of multivariate analysis},
+	volume={12},
+	number={3},
+	pages={450--455},
+	year={1982},
+	publisher={Elsevier}
+}
+@article{FID,
+	title={Gans trained by a two time-scale update rule converge to a local nash equilibrium},
+	author={Heusel, Martin and Ramsauer, Hubert and Unterthiner, Thomas and Nessler, Bernhard and Hochreiter, Sepp},
+	journal={Advances in neural information processing systems},
+	volume={30},
+	year={2017}
+}
 @article{GPT4,
    author = {Achiam, Josh and Adler, Steven and Agarwal, Sandhini and Ahmad, Lama and Akkaya, Ilge and Aleman, Florencia Leoni and Almeida, Diogo and Altenschmidt, Janko and Altman, Sam and Anadkat, Shyamal},
    title = {Gpt-4 technical report},
