--- a/glossary.tex
+++ b/glossary.tex
@@ -16,6 +16,32 @@
 	description={Latent Diffusion Model}
 }
 
+\newglossaryentry{FID}
+{
+	name=FID,
+	description={Fr\'echet Inception Distance}
+}
+
+\newglossaryentry{CMMD}
+{
+	name=CMMD,
+	description={Fr\'echet Inception Distance}
+}
+
+\newglossaryentry{CLIP}
+{
+	name=CLIP,
+	description={Contrastive Language- Image Pre-training}
+}
+
+
+\newglossaryentry{MMD}
+{
+	name=MMD,
+	description={Maximum Mean Discrepancy}
+}
+
+
 \newglossaryentry{CFG}
 {
 	name=CFG,
