--- a/theory_fundamental_NN.tex
+++ b/theory_fundamental_NN.tex
@@ -79,6 +79,7 @@ This is advantageous because the individual heads can concentrate on different t
 \end{figure}
 
 \subsection{Positional Encoding}
+\label{PositionalEmbedding}
 Before the embedded token sequence is fed as input to the transformer, a positional information is added to each token to provide the network with information about the order of the tokens. There are different methods, which can be divided into the categories relative \cite{RoPE, ALiBi, FIRE} versus absolute \cite{AttentionIsAllYouNeed, Floater, Cape, Shape} positional embedding or deterministic \cite{AttentionIsAllYouNeed, Shape, Cape, ALiBi, RoPE} versus learnable \cite{Floater, FIRE} positional embedding. 
 
 \subsubsection{Sinusoidal Positional Encoding}
