--- a/bibliography.bib
+++ b/bibliography.bib
@@ -27,6 +27,61 @@
 	volume={19},
 	year={2006}
 }
+@article{T5XXL,
+	title={Exploring the limits of transfer learning with a unified text-to-text transformer},
+	author={Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
+	journal={Journal of machine learning research},
+	volume={21},
+	number={140},
+	pages={1--67},
+	year={2020}
+}
+@article{Pixart_d,
+	title={Pixart-$\delta$}$: Fast and controllable image generation with latent consistency models},
+	author={Chen, Junsong and Wu, Yue and Luo, Simian and Xie, Enze and Paul, Sayak and Luo, Ping and Zhao, Hang and Li, Zhenguo},
+	journal={arXiv preprint arXiv:2401.05252},
+	year={2024}
+}
+@inproceedings{DiT,
+	title={Scalable diffusion models with transformers},
+	author={Peebles, William and Xie, Saining},
+	booktitle={Proceedings of the IEEE/CVF international conference on computer vision},
+	pages={4195--4205},
+	year={2023}
+}
+@article{Pixart_a,
+	title={Pixart-$\alpha$: Fast training of diffusion transformer for photorealistic text-to-image synthesis},
+	author={Chen, Junsong and Yu, Jincheng and Ge, Chongjian and Yao, Lewei and Xie, Enze and Wu, Yue and Wang, Zhongdao and Kwok, James and Luo, Ping and Lu, Huchuan and others},
+	journal={arXiv preprint arXiv:2310.00426},
+	year={2023}
+}
+@article{ghosh2023geneval,
+	title={Geneval: An object-focused framework for evaluating text-to-image alignment},
+	author={Ghosh, Dhruba and Hajishirzi, Hannaneh and Schmidt, Ludwig},
+	journal={Advances in Neural Information Processing Systems},
+	volume={36},
+	pages={52132--52152},
+	year={2023}
+}
+@inproceedings{DiffusionDB,
+	title={Diffusiondb: A large-scale prompt gallery dataset for text-to-image generative models},
+	author={Wang, Zijie J and Montoya, Evan and Munechika, David and Yang, Haoyang and Hoover, Benjamin and Chau, Duen Horng},
+	booktitle={Proceedings of the 61st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+	pages={893--911},
+	year={2023}
+}
+@article{COCO,
+	title={Microsoft coco captions: Data collection and evaluation server},
+	author={Chen, Xinlei and Fang, Hao and Lin, Tsung-Yi and Vedantam, Ramakrishna and Gupta, Saurabh and Doll{\'a}r, Piotr and Zitnick, C Lawrence},
+	journal={arXiv preprint arXiv:1504.00325},
+	year={2015}
+}
+@article{HPSv2,
+	title={Human preference score v2: A solid benchmark for evaluating human preferences of text-to-image synthesis},
+	author={Wu, Xiaoshi and Hao, Yiming and Sun, Keqiang and Chen, Yixiong and Zhu, Feng and Zhao, Rui and Li, Hongsheng},
+	journal={arXiv preprint arXiv:2306.09341},
+	year={2023}
+}
 @inproceedings{CLIP,
 	title={Learning transferable visual models from natural language supervision},
 	author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
