--- a/glossary.tex
+++ b/glossary.tex
@@ -22,6 +22,16 @@
 	description={Fr\'echet Inception Distance}
 }
 
+\newglossaryentry{HPSv2}
+{
+	name=HPSv2,
+	description={Human Preference Score v2}
+}
+\newglossaryentry{DiT}
+{
+	name=DiT,
+	description={Diffusion Transformer}
+}
 \newglossaryentry{CMMD}
 {
 	name=CMMD,
