--- a/bibliography.bib
+++ b/bibliography.bib
@@ -801,6 +801,14 @@ Vision and Pattern Recognition},
    type = {Electronic Article}
 }
 
+@inproceedings{adaLN,
+	title={Film: Visual reasoning with a general conditioning layer},
+	author={Perez, Ethan and Strub, Florian and De Vries, Harm and Dumoulin, Vincent and Courville, Aaron},
+	booktitle={Proceedings of the AAAI conference on artificial intelligence},
+	volume={32},
+	number={1},
+	year={2018}
+}
 @article{SDE,
    author = {Song, Yang and Sohl-Dickstein, Jascha and Kingma, Diederik P and Kumar, Abhishek and Ermon, Stefano and Poole, Ben},
    title = {Score-based generative modeling through stochastic differential equations},
