--- a/glossary.tex
+++ b/glossary.tex
@@ -64,6 +64,13 @@
 	description={Mean Squared Error}
 }
 
+\newglossaryentry{adaLN}
+{
+	name=adaLN,
+	description={Adaptive Layer Normalization}
+}
+
+
 \newglossaryentry{DDPM}
 {
 	name=DDPM,
