--- a/bibliography.bib
+++ b/bibliography.bib
@@ -801,6 +801,32 @@ Vision and Pattern Recognition},
    type = {Electronic Article}
 }
 
+@article{LLaVA,
+	title={Visual instruction tuning},
+	author={Liu, Haotian and Li, Chunyuan and Wu, Qingyang and Lee, Yong Jae},
+	journal={Advances in neural information processing systems},
+	volume={36},
+	pages={34892--34916},
+	year={2023}
+}
+
+@inproceedings{chen2024sharegpt4v,
+	title={Sharegpt4v: Improving large multi-modal models with better captions},
+	author={Chen, Lin and Li, Jinsong and Dong, Xiaoyi and Zhang, Pan and He, Conghui and Wang, Jiaqi and Zhao, Feng and Lin, Dahua},
+	booktitle={European Conference on Computer Vision},
+	pages={370--387},
+	year={2024},
+	organization={Springer}
+}
+
+
+@inproceedings{SAM,
+	title={Segment anything},
+	author={Kirillov, Alexander and Mintun, Eric and Ravi, Nikhila and Mao, Hanzi and Rolland, Chloe and Gustafson, Laura and Xiao, Tete and Whitehead, Spencer and Berg, Alexander C and Lo, Wan-Yen and others},
+	booktitle={Proceedings of the IEEE/CVF international conference on computer vision},
+	pages={4015--4026},
+	year={2023}
+}
 @inproceedings{adaLN,
 	title={Film: Visual reasoning with a general conditioning layer},
 	author={Perez, Ethan and Strub, Florian and De Vries, Harm and Dumoulin, Vincent and Courville, Aaron},
